Grace/tests/gibbs/errors/t017.grace
// ERROR = P1017
var a := -((7 + 6) * 2
